# benc

./: CHANGELOG.md  README.md  benc.cabal  cabal.project
.github/workflows/: haskell-ci.yml
bench/: Bench.hs
compare/: Bench.hs  compare.cabal
data/: README.txt
src/Data/Bencode/: AST.hs  Decode.hs  Encode.hs  Type.hs  Util.hs
test/: Test.hs
