cabal-version:      2.4
name:               compare
version:            0.1.0.0

benchmark benc-compare
    ghc-options: -Wall

    build-depends:
        base
      , benc
      , bencode      == 0.6.1.1
      , AttoBencode  == 0.3.1.0
      , bencoding    == 0.4.5.4
      , tasty
      , tasty-bench
      , tasty-hunit
      , bytestring
      , containers
      , deepseq
      , text
      , transformers == 0.5.6.2
      , vector
      -- bencoding depends on an orphan in the removed Control.Monad.Trans.Error

    hs-source-dirs:   .
    main-is:          Bench.hs
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
